Adding basic UI for adding cards.

--- a/application/static/css/base.css
+++ b/application/static/css/base.css
@@ -76,6 +76,15 @@ body {
   display: none;
 }
 
+/* Card styles */
+span.red {
+  color: red;
+}
+
+span.black {
+  color: black;
+}
+
 /* Board styles */
 table {
   text-align: center;
