--- a/application/static/css/base.css
+++ b/application/static/css/base.css
@@ -36,7 +36,7 @@ body {
   background-color: whiteSmoke;
   border-bottom: 1pt solid #E5E5E5;
 }
-#board, #warning, #cards, #games {
+#warning, #cards, #games {
   margin: 1em;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -47,14 +47,6 @@ body {
   display: box;
   box-orient: vertical;
   box-align: center;
-}
-#gameHistoryWrapper {
-  background-color: whiteSmoke;
-}
-#victory {
-  height: 1em;
-  padding: 5pt;
-  font-weight: bold;
 }
 
 /* Initial element visibility */
@@ -85,7 +77,7 @@ span.black {
   color: black;
 }
 
-/* Board styles */
+/* Table styles */
 table {
   text-align: center;
   padding: 5pt 0pt;
@@ -117,30 +109,9 @@ td.noRight {
 td.noBottom {
   border-bottom: 0pt;
 }
-
-/* Game history styles */
-#gameHistoryWrapper h2 {
-  font-size: 14pt;
-  font-weight: bold;
-  padding: 1em;
-  margin: 0pt;
-  background-color: lightSlateGray;
-  color: #white;
-}
-#gameHistoryWrapper ul {
-  font-size: 12pt;
-  font-weight: bold;
-  padding: 0pt;
-  margin: 0pt;
-  list-style-type: none;
-}
-#gameHistoryWrapper li {
-  padding: 5pt 0pt 5pt 2em;
-  margin: 0pt;
-  background-color: whiteSmoke;
-}
-#gameHistoryWrapper li:nth-child(even) {
-  padding: 5pt 0pt 5pt 2em;
-  margin: 0pt;
-  background-color: #D5D5D5;
+td > a.fullTd {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
 }
